cleanup and stlye

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-
 	<div class="wrapper center backg2" id ="start">
+		<div class="pbox2">
 		<h1> A Univeristy Choose Your Own Adventure</h1>
 		<p class="p">Can you arrive on class in time?</p>
+		</div>
 		<a id="button"><h2 class="button">START</h2></a>
 	</div>
 
